<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.appdynamics.extensions</groupId>
    <artifactId>aws-api-gateway-monitoring-extension</artifactId>
    <version>2.0.7</version>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
        <target.name>AWSAPIGatewayMonitor</target.name>
        <target.dir>${project.build.directory}/${target.name}</target.dir>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.appdynamics</groupId>
            <artifactId>machine-agent</artifactId>
            <version>3.7.11</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.appdynamics.extensions</groupId>
            <artifactId>aws-cloudwatch-exts-commons</artifactId>
            <version>2.2.8</version>
        </dependency>
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-api-gateway</artifactId>
            <version>1.12.788</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>4.11.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <version>4.11.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <argLine>
                        --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED 
                        --add-opens java.base/java.lang=ALL-UNNAMED 
                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED 
                        --add-opens java.base/java.lang.invoke=ALL-UNNAMED 
                        --add-opens java.base/java.util.regex=ALL-UNNAMED 
                        --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED 
                        --add-opens java.base/java.io=ALL-UNNAMED 
                        --add-opens java.base/java.xml=ALL-UNNAMED 
                        --add-exports java.xml/jdk.xml.internal=ALL-UNNAMED 
                        --add-opens java.base/java.util.stream=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.2</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Implementation-Title>AWS API Gateway Monitor v${project.version} Build Date ${maven.build.timestamp}</Implementation-Title>
                                    </manifestEntries>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Implementation-Title>AWS API Gateway Monitor v${project.version} Build Date ${maven.build.timestamp}
                            </Implementation-Title>
                            <Main-Class>com.appdynamics.extensions.workbench.WorkbenchServerLauncher</Main-Class>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <id>install</id>
                        <phase>install</phase>
                        <configuration>
                            <target>
                                <mkdir dir="${target.dir}" />
                                <copy todir="${target.dir}">
                                    <fileset dir="src/main/resources/conf" includes="monitor.xml" />
                                    <fileset dir="src/main/resources/conf" includes="config.yml" />
                                    <fileset dir="${project.basedir}" includes="NOTICE.txt" />
                                    <fileset dir="${project.basedir}" includes="LICENSE.txt" />
                                </copy>
                                <copy todir="${target.dir}">
                                    <fileset dir="${project.build.directory}" includes="${project.artifactId}.${project.packaging}" />
                                </copy>
                                <zip destfile="${target.dir}-${project.version}.zip">
                                    <zipfileset dir="${target.dir}" filemode="755" prefix="${target.name}/" />
                                </zip>
                                <delete dir="${target.dir}" />
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>external.atlassian.jgitflow</groupId>
                <artifactId>jgitflow-maven-plugin</artifactId>
                <version>1.0-m3</version>
                <configuration>
                    <noDeploy>true</noDeploy>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.1</version>
            </plugin>
            <plugin>
                <artifactId>maven-scm-plugin</artifactId>
                <version>1.8.1</version>
                <configuration>
                    <tag>${project.artifactId}-${project.version}</tag>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>github-maven-repo</id>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <url>https://github.com/Appdynamics/maven-repo/raw/master/releases</url>
        </repository>
    </repositories>

    <scm>
        <connection>scm:git:https://github.com/Appdynamics/aws-api-gateway-monitoring-extension.git</connection>
    </scm>



</project>
